[build-system]
requires = ["poetry >= 1.2.1", "pip>=20.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "roadside-station-route-search"
version = "0.0.1"
description = "Roadside Station Route Search"
license = "MIT"
authors = [
    "Takumi Yamamoto"
]
readme = 'README.md'
repository = "https://github.com/tkmyamamoto/roadside-station-route-search"
keywords = ['roadside-station', 'michi-no-eki', 'route', 'search', 'python']
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
pip = ">=20.0.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
pep8 = "*"
pytest = "*"
pyproject-flake8 = "^0.0.1-alpha.2"
black = "^22.3"
hacking = "^4.1.0"
flake8-docstrings = "^1.6.0"
isort = {extras = ["pyproject"], version = "^5.9.3"}
importlib-metadata = "^4"

[tool.flake8]
exclude = ".venv"
ignore = "H102,H103,W503,E203,H301,H306,E501"
max-line-length = 100

[tool.pytest.ini_options]
addopts = "--verbose --durations=0"
testpaths = ["tests"]

[tool.black]
line-length = 100
exclude = '''
(
    .pytest_cache
    | .venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
